test/Fail/Issue373.err
Issue373.agda:10,1-48: error: [GenericDocError]
Conflicting GHC pragmas for Issue373.Nat at
  - Issue373.agda:7,1-28
  - Issue373.agda:10,1-48
